[package]
name = "ohBoi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
clap = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

glow = "0.12.0"
imgui = "0.10.0"
sdl2 = { version = "0.34.5" }
imgui-sdl2-support = "0.10.0"
imgui-glow-renderer = "0.10.0"
