[package]
name = "ohBoi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
clap = "4.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.17.1"
bitfield = "0.15.0"

sdl2 = "0.34.5"
glow = "0.13.1"
imgui = "0.11.0"
imgui-sdl2-support = "0.11.0"
imgui-glow-renderer = "0.11.0"
tinyfiledialogs = "3.9.1"
openal = "0.2.2"

[target.'cfg(windows)'.dependencies]
sdl2 = { version = "0.34.5", features = ["bundled"] }