[package]
name = "ohBoi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = { version = "0.7.1", features = ["colored"] }
clap = "4.5.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21.1"
bitfield = "0.19.0"

sdl2 = "0.37.0"
glow = "0.16.0"
imgui = "0.12.0"
imgui-sdl2-support = "0.13.0"
imgui-glow-renderer = "0.13.0"
tinyfiledialogs = "3.9.1"
openal = "0.2.2"
cfg-if = "1.0.0"
regex = "1.10.4"
strfmt = "0.2.4"

[features]
debug_ui = []

[target.'cfg(windows)'.dependencies]
sdl2 = { version = "0.37.0", features = ["bundled"] }