[package]
name = "ohboi-core"
version.workspace = true
# authors.workspace = true
# rust-version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
log = "0.4"
fern = { version = "0.7.1", features = ["colored"] }
bitfield = "0.19.0"

cfg-if = "1.0.0"
strfmt = "0.2.4"

[features]
debugging = []