[package]
name = "ohboi-sdl"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[[bin]]
name = "ohboi_sdl"
path = "src/main.rs"

[dependencies]
ohboi-core = { path = "../ohboi-core" }
log = "0.4"
fern = { version = "0.7.1", features = ["colored"] }
clap = "4.5.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21.1"

sdl2 = "0.37.0"
glow = "0.16.0"
imgui = "0.12.0"
imgui-sdl2-support = "0.13.0"
imgui-glow-renderer = "0.13.0"
tinyfiledialogs = "3.9.1"
openal = "0.2.2"
cfg-if = "1.0.0"
regex = "1.10.4"
strfmt = "0.2.4"

[features]
debug_ui = ["ohboi-core/debugging"]

[target.'cfg(windows)'.dependencies]
sdl2 = { version = "0.37.0", features = ["bundled"] }